--- a/assets/css/blog-styles.css
+++ b/assets/css/blog-styles.css
@@ -10,6 +10,10 @@
   text-align: center;
   color: #fff;
 }
+li{
+  list-style: none;
+  padding: 10px;
+}
 
 .post-header h1 {
   font-size: 2.5rem;
