--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -771,6 +771,7 @@ a {
 /* Offer Zone styling */
 
 .web-offer-card {
+    display: none !important;
     width: 100%;
     max-width: 380px;
     margin-top: 100px;
